   _setATCTFileContent()
   [tiran]

 * Disabled external storages based types because neither I nor MrTopf have time
   to support it right now.
   [tiran]

 * Added long description field and image tag to ATImage. Fixed [ 1056050 ] Add
   longdesc to ATImage.
   [tiran]

 * Fixed [ 1057691 ] Make ATContentTypes tests works with testrunner.py. Thx to
   dan_t.
   [dan_t, tiran]

0.2.0-rc3 - 2004-10-17
======================

 * Added ATContentTypes Site customization policy
   [tiran]

 * Fixed [ 1041830 ] TypeError: cmf_edit() takes at least 3 non-keyword
   arguments by changing the edit() implementation. A class var named
   cmf_edit_kws was introduced to fix the issue.
   [tiran]

 * ATLink: Use urlparse library to sanify the url to strip of additional
   slashes. This is fixing http://plone.org/collector/3296 for ATCT.
   [tiran]

 * Added support for the clear format feature of CMF Document.
   [tiran]

0.2.0-rc2 - 2004-10-06
======================

 * Fixed problem with isIDAutoGenerated if the object was not wrapped in a site
   [tiran]
 
 * Fixed download tab [tiran]
 
 * Made image/file viewable when invoked directly by adding an index_html
   [tiran]
 
 * Replaced tag method of ATImage [tiran]

 * Fixed migration: Migration failed when there was a broken object in a folder
  [tiran]

 * Fixed property migration: continue if the object already has this attribut
   [tiran]
   
 * Added talkback discussion migration
   [tiran]

 * Set description as primary field for ATEvent. Also use an easier syntax for
   setting description to isMetadata = False.
   [tiran]

 * Renamed tab from history to last changes. Added big warning that the history
   is based on zodb revisions.
   [tiran]
   
 * Added ExtendingType howto (more to follow)
   [tiran]

 * Recoded migration walkers to use a generator instead returning a list to
   make them much more memory efficient.
   [tiran]

 * Rewritten folder migration to use the depth inside the folder structur