@@ -18,7 +18,7 @@ are permitted provided that the following conditions are met:
    to endorse or promote products derived from this software without specific
    prior written permission.
 
-$Id: Migrator.py,v 1.21 2004/10/14 22:30:52 tiran Exp $
+$Id: Migrator.py,v 1.21.4.1 2004/11/10 18:28:10 tiran Exp $
 """
 
 from copy import copy
@@ -28,6 +28,7 @@ from Acquisition import aq_base, aq_parent
 from DateTime import DateTime
 from Persistence import PersistentMapping
 from OFS.Uninstalled import BrokenClass
+from OFS.IOrderSupport import IOrderedContainer
 
 from common import *
 
@@ -369,11 +370,21 @@ class FolderMigrationMixin(ItemMigrationMixin):
         #        continue
         #    id = obj.getId()
         #    self.new._setObject(id, aq_base(obj))
+        
+        orderAble = IOrderedContainer.isImplementedBy(self.old)
+        orderMap = {}
 
         # using objectIds() should be safe with BrokenObjects
         for id in self.old.objectIds():
             obj = getattr(self.old.aq_inner.aq_explicit, id)
+            if orderAble:
+                orderMap[id] = self.old.getObjectPosition(id)
             self.new._setObject(id, aq_base(obj))
+        
+        # reorder items
+        if orderAble:
+            for id, pos in orderMap.items():
+                self.new.moveObjectToPosition(id, pos)
 
 class CMFItemMigrator(ItemMigrationMixin, BaseCMFMigrator):
     """
